--- a/client/src/components/RegisterTenancy/register-user.module.scss
+++ b/client/src/components/RegisterTenancy/register-user.module.scss
@@ -2,21 +2,23 @@
 @import "../../styles/breakpoint";
 
 .RegisterContainer {
+  min-height: calc(100vh - 140px);
   @include xl {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: calc(100vh - 190px);
   }
 }
 
 .Register {
   padding: 0 3rem;
-  margin-top: 4rem;
+  margin-top: 1rem;
 
   @include xl {
     font-size: 1rem;
     padding: 0 3rem;
-    margin-top: 0;
+    margin-top: 0rem;
   }
 
   h1,
@@ -27,11 +29,11 @@
 
   h1 {
     font-size: 2.5rem;
-    margin-top: 4rem;
+    margin-top: 2rem;
     margin-bottom: 1rem;
 
     @include xl {
-      margin-top: 3rem;
+      margin-top: 1rem;
       margin-bottom: 1rem;
       font-size: 3rem;
       font-weight: 400;
@@ -45,8 +47,8 @@
     font-weight: 500;
     padding: 0 3rem;
     @include xl {
-      margin-top: 3rem;
-      margin-bottom: 3rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
       font-size: 2rem;
       font-weight: 600;
       padding: 0 20rem;
@@ -70,11 +72,11 @@
     }
   }
   h4 {
-    padding-bottom: 1.25em;
+    padding-bottom: 0;
     font-size: 2.2rem;
 
     @include xl {
-      padding-bottom: 1.25em;
+      padding-bottom: 0rem;
       font-size: 1.5rem;
     }
   }
@@ -111,7 +113,7 @@
   justify-content: flex-start;
   margin: 0 3rem;
   margin-top: 1rem;
-  margin-bottom: 3rem;
+  flex: 1 0 auto;
   padding: 2rem 2rem;
   border-radius: 14px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
@@ -120,8 +122,9 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex: 1 0 auto;
     flex-direction: column;
-    margin-top: 2rem;
+    margin-top: 1rem;
     padding: 2rem 2rem;
     box-shadow: none;
   }
@@ -132,7 +135,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    // align-items: center;
   }
 }
 
@@ -158,7 +160,7 @@
   margin: 3rem 0;
   text-align: right;
   @include xl {
-    margin: 3rem 0;
+    margin: 0rem 0;
     text-align: center;
   }
 }
@@ -171,6 +173,7 @@
   text-align: center;
   @include xl {
     margin: 0;
+    margin-bottom: 2rem;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -255,7 +258,6 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  // text-align: left;
   width: 100%;
   @include xl {
     margin: 0 auto;
@@ -264,7 +266,6 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    // text-align: left;
     width: 45%;
   }
 
