--- a/api/views/rj14Email.handlebars
+++ b/api/views/rj14Email.handlebars
@@ -380,7 +380,7 @@ text-decoration: none;
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Great news {{tenantsName}},</h3>			
+							<h3>Buenas noticias {{tenantsName}},</h3>			
             				
             			</div>
             		</td>
@@ -394,7 +394,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3> {{agencyName}} confirmed that you will be moving into {{rentalAddress}}!</h3>
+		              	<h3>¡ {{agencyName}} ha confirmado que vas a alquilar la propiedad en {{rentalAddress}} !</h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -404,7 +404,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px; color: #6aa3a1;">
-		              	<h2>Complete your registration now.</h2>
+		              	<h2>¿Cuáles son los siguientes pasos?</h2>
 						 
 		              	
 		            	</div>
@@ -420,18 +420,31 @@ text-decoration: none;
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>Welcome to the deposit revolution!</h3>
+								<h3>Regístrate con tu tarjeta de débito. La tarjeta debe estar conectada con la cuenta donde recibes tus ingresos.</h3>
+								<h4>Sólo en caso que hubieran daños en el inmueble o impagos, los importes serán cargados en esta misma tarjeta.</h4>
 								
 							</div>
 						</td>
 					</tr>
 			</table>
 
+			<table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
+		          <tr>
+		            <td class="bg_white email-section">
+		            	<div class="heading-section" style="text-align: center; padding: 0 30px; color: #6aa3a1;">
+		              	<h2>¡Bienvenido a la revolución de los depósitos!</h2>
+						 
+		              	
+		            	</div>
+		          </tr><!-- end: tr -->
+					
+			</table>
+
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj3/{{randomID}}">Start your rental!</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj3/{{randomID}}">¡Empieza tu alquiler!</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -442,10 +455,10 @@ text-decoration: none;
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: left; padding: 0px 30px; color: #6aa3a1;">
 		              	
-						<h3>Support Team,</h3>
-		              	<h4>Phone - WhatsApp: +34 623 063 769<br/>
+						<h3>Equipo de Soporte,</h3>
+		              	<h4>Móvil -  WhatsApp: +34 623 063 769<br/>
       					E-Mail: info@rimbo.com<br/>
-      					Web site: <a href="http://www.rimbo.rent">rimbo.rent</a>
+      					Web: <a href="http://www.rimbo.rent">rimbo.rent</a>
       					</h4>
 		            	</div>
 		          </tr><!-- end: tr -->
