--- a/api/views/rj16Email.handlebars
+++ b/api/views/rj16Email.handlebars
@@ -380,7 +380,8 @@ text-decoration: none;
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Great news, {{agencyContactPerson}},</h3>		
+							
+							<h3>¡Buenas noticias {{agencyContactPerson}}!</h3>		
             			</div>
             		</td>
             	</tr>
@@ -393,8 +394,9 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3>We confirm that <b>{{tenantsName}}</b> has successfully registered!</h3>
+		              	<h3>¡Te confirmamos que <b>{{tenantName}}</b> ha registrado correctamente su tarjeta en Rimbo!</h3>
 
+						<p>¡Puedes ponerte en contacto con {{tenantName}} para continuar con la firma del contrato de alquiler!</p>
 		            	</div>
 		          </tr><!-- end: tr -->
 					<td valign="middle" class="hero hero-2 bg_white" style="padding: 1em 0;">
@@ -408,7 +410,7 @@ text-decoration: none;
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>Once the rent contract is signed - click on the link below and upload the Rimbo Annex to the rental agreement and the SEPA order.</h3>
+								<h3>Una vez esté firmado, simplemente haz clic en el siguiente enlace y sube el Anexo de Rimbo al contrato de alquiler.</h3>
 								
 							</div>
 						</td>
@@ -419,7 +421,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center;">
-		              	<h2>Reach out to us anytime at info@rimbo.rent!</h2>
+		              	<h2>Te recordamos que estamos aquí para ayudarte con cualquier consulta que tengas, puedes responder a este correo electrónico o escribir directamente a info@rimbo.rent.</h2>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -428,7 +430,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px; color: #6aa3a1;">
-		              	<h2>It’s a pleasure to collaborate with you!</h2>
+		              	<h2>¡Es un placer colaborar contigo!</h2>
 		            	</div>
 		          </tr><!-- end: tr -->
 					
@@ -438,7 +440,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rjs/{{tenancyID}}">Upload annex</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rjs/{{tenancyID}}">Subir Documentación</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -449,10 +451,10 @@ text-decoration: none;
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: left; padding: 0px 30px; color: #6aa3a1;">
 		              	
-						<h3>Support Team,</h3>
-		              	<h4>Phone - WhatsApp: +34 623 063 769<br/>
+						<h3>Equipo de Soporte,</h3>
+		              	<h4>Móvil -  WhatsApp: +34 623 063 769<br/>
       					E-Mail: info@rimbo.com<br/>
-      					Web site: <a href="http://www.rimbo.rent">rimbo.rent</a>
+      					Web: <a href="http://www.rimbo.rent">rimbo.rent</a>
       					</h4>
 		            	</div>
 		          </tr><!-- end: tr -->
