--- a/api/views/rj17Email.handlebars
+++ b/api/views/rj17Email.handlebars
@@ -361,8 +361,8 @@ a{
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Hi again {{tenantsName}}</h3>				
-            				<h3>Welcome to the Rimbo family!</h3>
+							<h3>Hola de nuevo {{tenantsName}},</h3>				
+            				<h3>¡Estamos muy emocionados de que formes parte de la familia Rimbo!</h3>
             			</div>
             		</td>
             	</tr>
@@ -375,7 +375,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3><b>Important: </b>Please, read the ‘Tenant’s guide to Rimbo’ attached to this email: How to make the most out of Rimbo.</h3>
+		              	<h3><b>Importante: </b>Por favor, lee la "Guia de Rimbo para Inquilinos" que está adjunta a este correo, para saber cómo aprovechar los servicios que Rimbo ofrece.</h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -407,7 +407,7 @@ a{
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>We are glad you have chosen to work with us and look forward to a long lasting partnership!</h3>
+								<h3>¡Estamos muy contentos que nos hayas escogido y esperamos estar juntos durante mucho tiempo!</h3>
 								
 							</div>
 						</td>
@@ -418,7 +418,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px; color: #6aa3a1;">
-		              	<h2>What’s next?: Enjoy your new home!</h2>
+		              	<h2>¡Disfruta de tu nueva casa!</h2>
 		              	
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -441,7 +441,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
-		              	<h3>Warm regards,</h3>
+		              	<h3>Un cordial saludo,</h3>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -451,10 +451,10 @@ a{
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: left; padding: 0px 30px; color: #6aa3a1;">
 		              	
-						<h3>Support Team,</h3>
-		              	<h4>Phone - WhatsApp: +34 623 063 769<br/>
+						<h3>Equipo de Soporte,</h3>
+		              	<h4>Móvil -  WhatsApp: +34 623 063 769<br/>
       					E-Mail: info@rimbo.com<br/>
-      					Web site: <a href="http://www.rimbo.rent">rimbo.rent</a>
+      					Web: <a href="http://www.rimbo.rent">rimbo.rent</a>
       					</h4>
 		            	</div>
 		          </tr><!-- end: tr -->
