--- a/api/views/rj20Email.handlebars
+++ b/api/views/rj20Email.handlebars
@@ -361,8 +361,8 @@ a{
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Good news {{agencyContactPerson}}!</h3>				
-            				<h4>From this moment on, Rimbo’s service is live for  {{rentalAddress}}!</h4>
+							<h3>¡Buenas noticias {{agencyContactPerson}}!</h3>				
+            				<h4>Desde este momento Rimbo ya está cubriendo la propiedad en {{rentalAddress}}.</h4>
             			</div>
             		</td>
             	</tr>
@@ -375,7 +375,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3><b>Share with your landlord the ‘Landlord’s guide to Rimbo’</b> attached to this email: How to make the most out of Rimbo. </h3>
+		              	<h3><b>Comparte con tu propietario la “Guía del Propietario en Rimbo”</b> adjuntada a este email. “¿Cómo sacar el máximo provecho de Rimbo?”</h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -407,7 +407,7 @@ a{
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>In case you are not managing this property - please, let us know. We can share the Guide with the Landlord directly.</h3>
+								<h3>En el caso de que no seas la persona que gestiona esta propiedad, por favor háznoslo saber. Podemos compartir la Guía con el propietario directamente.</h3>
                               
 								
 							</div>
@@ -419,7 +419,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px; color: #6aa3a1;">
-		              	<h2>We appreciate the trust placed in Rimbo! </h2>
+		              	<h2>¡Apreciamos la confianza depositada en Rimbo!</h2>
 		              	
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -442,7 +442,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
-		              	<h3>It is a pleasure to collaborate with you and hope we will talk again soon!</h3>
+		              	<h3>¡Es un placer colaborar contigo y esperamos volver a hablar pronto!</h3>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -452,10 +452,10 @@ a{
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: left; padding: 0px 30px; color: #6aa3a1;">
 		              	
-						<h3>Support Team,</h3>
-		              	<h4>Phone - WhatsApp: +34 623 063 769<br/>
+						<h3>Equipo de Soporte,</h3>
+		              	<h4>Móvil -  WhatsApp: +34 623 063 769<br/>
       					E-Mail: info@rimbo.com<br/>
-      					Web site: <a href="http://www.rimbo.rent">rimbo.rent</a>
+      					Web: <a href="http://www.rimbo.rent">rimbo.rent</a>
       					</h4>
 		            	</div>
 		          </tr><!-- end: tr -->
