--- a/api/views/rj3Email.handlebars
+++ b/api/views/rj3Email.handlebars
@@ -361,8 +361,8 @@ a{
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Hi {{agencyContactPerson}}</h3>				
-            				<h3>Thank you for listing your tenant on Rimbo.rent. <br/>We have received all data correctly.</h3>
+							<h3>Hola {{agencyContactPerson}}</h3>				
+            				<h3>Gracias por registrar a tu inquilino en Rimbo.rent. <br/>Hemos recibido correctamente todos los datos.</h3>
             			</div>
             		</td>
             	</tr>
@@ -375,7 +375,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3>Please, keep an eye on your email in the upcoming hours in order to proceed with the next steps.</h3>
+		              	<h3>Por favor, comprueba tu correo electrónico en las próximas horas para proseguir con los siguientes pasos.</h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -386,15 +386,15 @@ a{
 							<div class="text" style="padding: 0em 3em; text-align: left; color: black;">
 								
 								<ul>
-                                    <li>Tenant's full name: {{tenantsName}}</li>
-                                    <li>Tenant's phone number: {{tenantsPhone}}</li>
-                                    <li>Tenant's email: {{tenantsEmail}}</li>
-                                    <li>Monthly rent: {{rentAmount}}€</li>
-                                    <li>Selected Product: {{product}}</li>
-                                    <li>Contract duration: {{rentDuration}} years</li>
-                                    <li>Address of property: {{rentalAddress}}</li>
-                                    <li>Postal code: {{rentalPostalCode}}</li>
-                                    <li>City: {{rentalCity}}</li>
+                                    <li>Nombre completo del inquilino: {{tenantsName}}</li>
+                                    <li>TNúmero de teléfono del inquilino: {{tenantsPhone}}</li>
+                                    <li>Correo electrónico del inquilino: {{tenantsEmail}}</li>
+                                    <li>Alquiler mensual: {{rentAmount}}€</li>
+                                    <li>Servicio escogido: {{product}}</li>
+                                    <li>Duración del contrato: {{rentDuration}} years</li>
+                                    <li>Dirección del apartamento: {{rentalAddress}}</li>
+                                    <li>Código postal del apartamento: {{rentalPostalCode}}</li>
+                                    <li>Ciudad del apartamento: {{rentalCity}}</li>
                                 </ul>
 								
 							</div>
@@ -407,7 +407,7 @@ a{
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>We will contact the Tenant to complete the registration and we’ll keep you posted!</h3>
+								<h3>Nos pondremos en contacto con el/la inquilino/a y llevaremos a cabo la evaluación para garantizar su solvencia. Una vez completada la evaluación, te la enviaremos.</h3>
 								
 							</div>
 						</td>
@@ -431,7 +431,13 @@ a{
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>As soon as the screening is done we will contact you via email to complete the rental process of this property.</h3>
+								<h3>Tan pronto como se realice la evaluación, nos pondremos en contacto contigo para completar el proceso de alquiler de esta propiedad.</h3>
+
+								<p>Por favor, comprueba tu correo electrónico en las próximas horas.</p>
+
+								<p>¡A partir de ahora, gestionar este alquiler será más seguro y rápido que nunca!</p>
+
+
 								
 							</div>
 						</td>
@@ -442,7 +448,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
-		              	<h3>Warm greetings from our team!</h3>
+		              	<h3>¡Saludos cordiales de nuestro equipo!</h3>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -452,10 +458,10 @@ a{
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: left; padding: 0px 30px; color: #6aa3a1;">
 		              	
-						<h3>Support Team,</h3>
-		              	<h4>Phone - WhatsApp: +34 623 063 769<br/>
+						<h3>Equipo de Soporte,</h3>
+		              	<h4>Móvil -  WhatsApp: +34 623 063 769<br/>
       					E-Mail: info@rimbo.com<br/>
-      					Web site: <a href="http://www.rimbo.rent">rimbo.rent</a>
+      					Web: <a href="http://www.rimbo.rent">rimbo.rent</a>
       					</h4>
 		            	</div>
 		          </tr><!-- end: tr -->
