--- a/api/views/rj4Email.handlebars
+++ b/api/views/rj4Email.handlebars
@@ -377,7 +377,7 @@ a{
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Hello <b>{{tenantsName}}</b></h3>
+							<h3>Hola <b>{{tenantsName}}</b></h3>
             			</div>
             		</td>
             	</tr>
@@ -390,7 +390,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3>You have contacted <b>{{agencyName}}</b> regarding the following apartment:</h3>
+		              	<h3>Te has puesto en contacto con <b>{{agencyName}}</b> en relación con la siguiente propiedad:</h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -401,9 +401,9 @@ a{
 							<div class="text" style="padding: 1em 3em; text-align: left; color: black;">
 								
 								<ul>
-                                    <li><b>Address:</b> {{rentalAddress}}</li>
-                                    <li><b>Postal code:</b> {{rentalPostalCode}}</li>
-                                    <li><b>City:</b> {{rentalCity}}</li>
+                                    <li><b>Dirección:</b> {{rentalAddress}}</li>
+                                    <li><b>Código postal:</b> {{rentalPostalCode}}</li>
+                                    <li><b>Ciudad:</b> {{rentalCity}}</li>
                                 </ul>
 								
 							</div>
@@ -415,7 +415,7 @@ a{
 					<tr>
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
-								<h3>Rimbo joined forces with {{agencyName}} to move you into your next apartment at <b>{{rentalAddress}}</b> quick and easy!</h3>
+								<h3>{{agencyName}}se ha unido a Rimbo para hacer tu alquiler más fácil. Suena genial, ¿no?</h3>
 							</div>
 						</td>
 					</tr>
@@ -423,24 +423,15 @@ a{
 
 				
 					
-			<table>
-					<tr>
-						<td>
-							<div class="text" style="padding: 1em 3em; text-align: left;">
-								
-								<h3>With Rimbo, you ‘check in’ without paying additional cash deposit, and pay for any damages or unpaid rent only when you check out.</h3>
-								
-							</div>
-						</td>
-					</tr>
-			</table>
+			
 
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px; color: #6aa3a1;">
-		              	<h2>It sounds great, doesn't it?</h2>
-						  <h3>Click on the link below to register.</h3>
+		              	
+						  <h3>Haz click en el siguiente enlace para registrarte.</h3>
+						  <p>Envíanos tu información y nos encargaremos de realizar algunas comprobaciones para demostrar que eres un buen inquilino.</p>
 		              	
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -451,7 +442,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center;">
-		              	<h2>What’s next?</h2>
+		              	<h2>¡Es online, rápido, seguro y completamente confidencial!</h2>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -463,7 +454,7 @@ a{
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>Rimbo takes care of running a few checks - to prove that you are a great tenant. It’s online, fast, secure and completely confidential.</h3>
+								<h3>¡Únete ahora!</h3>
 								
 							</div>
 						</td>
@@ -474,7 +465,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{randomID}}">Join now!</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{randomID}}">Me quiero unir</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -485,10 +476,10 @@ a{
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: left; padding: 0px 30px; color: #6aa3a1;">
 		              	
-						<h3>Support Team,</h3>
-		              	<h4>Phone - WhatsApp: +34 623 063 769<br/>
+						<h3>Equipo de Soporte,</h3>
+		              	<h4>Móvil -  WhatsApp: +34 623 063 769<br/>
       					E-Mail: info@rimbo.com<br/>
-      					Web site: <a href="http://www.rimbo.rent">rimbo.rent</a>
+      					Web: <a href="http://www.rimbo.rent">rimbo.rent</a>
       					</h4>
 		            	</div>
 		          </tr><!-- end: tr -->
