--- a/api/views/rj9Email.handlebars
+++ b/api/views/rj9Email.handlebars
@@ -380,7 +380,7 @@ text-decoration: none;
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Thank you, {{tenantsName}}</h3>		
+							<h3>¡Gracias,{{tenantsName}}!</h3>		
             			</div>
             		</td>
             	</tr>
@@ -393,7 +393,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3>You have registered successfully.</h3>
+		              	<h3>Tu registro se ha completado con éxito.</h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -405,7 +405,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center;">
-		              	<h2>What’s next?</h2>
+		              	<h2>¿Cuáles son los siguientes pasos?</h2>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -416,7 +416,8 @@ text-decoration: none;
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>We will complete our checks and registration within 2 business days</h3>
+								<h3>- Completaremos nuestras comprobaciones y tu registro en 1 día laborable.</h3>
+								<h3>- Tu agente se pondrá en contacto contigo para confirmar que todo está correcto.</h3>
 								
 							</div>
 						</td>
@@ -425,7 +426,7 @@ text-decoration: none;
 
 				
 					
-			<table>
+			{{!-- <table>
 					<tr>
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
@@ -435,14 +436,14 @@ text-decoration: none;
 							</div>
 						</td>
 					</tr>
-			</table>
+			</table> --}}
 
             <table>
 					<tr>
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>In just a few hours you will be part of Rimbo's family!</h3>
+								<h3>¡En tan solo unas horas formarás parte de la revolución de los depósitos!</h3>
 								
 							</div>
 						</td>
@@ -453,7 +454,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px; color: #6aa3a1;">
-		              	<h2>Exciting, right?</h2>
+		              	<h2>Emocionante, ¿verdad?</h2>
 		            	</div>
 		          </tr><!-- end: tr -->
 					
@@ -464,10 +465,10 @@ text-decoration: none;
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: left; padding: 0px 30px; color: #6aa3a1;">
 		              	
-						<h3>Support Team,</h3>
-		              	<h4>Phone - WhatsApp: +34 623 063 769<br/>
+						<h3>Equipo de Soporte,</h3>
+		              	<h4>Móvil -  WhatsApp: +34 623 063 769<br/>
       					E-Mail: info@rimbo.com<br/>
-      					Web site: <a href="http://www.rimbo.rent">rimbo.rent</a>
+      					Web: <a href="http://www.rimbo.rent">rimbo.rent</a>
       					</h4>
 		            	</div>
 		          </tr><!-- end: tr -->
