--- a/api/views/rjsEmail.handlebars
+++ b/api/views/rjsEmail.handlebars
@@ -385,7 +385,7 @@ li {
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Hello super Rimbo team!</h3>		
+							<h3>¡Hola!</h3>		
             			</div>
             		</td>
             	</tr>
@@ -400,7 +400,7 @@ li {
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
 		              	<h3>We inform you that {{agencyName}} has confirmed that the rental at {{rentalAddress}} of {{tenantsName}} has been completed successfully and <b>the Annex of Rimbo and SEPA order is attached (see additional email).</b></h3>
 
-						  
+						  <h3>Te informamos que {{agencyName}} ha confirmado que el alquiler en {{rentalAddress}} de {{tenantsName}} se ha completado con éxito y <b>se adjunta el Anexo de Rimbo justo debajo.</b></h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -412,9 +412,9 @@ li {
 					<tr>
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left; color:#000;">
-								<h3>Docs:</h3>
+								<h3>Documentos:</h3>
 								<ul>
-									<li><b>Annex of Rimbo and SEPA order:</b> {{pmAnex}}</li>
+									<li><b>Anexo de Rimbo:</b> {{pmAnex}}</li>
                                 </ul>
                                 
 							</div>
@@ -426,7 +426,7 @@ li {
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center;">
-		              	<h2>Please, prepare the Aval Primer for this Tenancy.</h2>
+		              	<h2>Por favor, prepara el Aval Primer.</h2>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -437,14 +437,14 @@ li {
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>Congratulations!</h3>
+								<h3>¡Felicidades!</h3>
 								
 							</div>
 						</td>
 					</tr>
 				</table>
 
-				<table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
+				{{!-- <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center;">
@@ -452,13 +452,13 @@ li {
 						  
 		          </tr><!-- end: tr -->
 					
-			</table>
+			</table> --}}
 
             <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rjs/{{tenancyID}}/service-start">Start Service!</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rjs/{{tenancyID}}/service-start">Inicio de Servicios</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
