--- a/api/views/rjxx4Email.handlebars
+++ b/api/views/rjxx4Email.handlebars
@@ -381,7 +381,7 @@ a{
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Hello Rimbo Super Team!</h3>		
+							<h3>Hola equipo Rimbo,</h3>		
             				
             			</div>
             		</td>
@@ -395,7 +395,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3>The agency {{agencyName}} has approved the tenant {{tenantsName}}. Here you have the tenant information:</h3>
+		              	<h3>La agencia {{agencyName}} <b>ha aprobado</b> al inquilino <b>{{tenantsName}}</b>. Aqui tienes la información:</h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -404,31 +404,33 @@ a{
 					<tr>
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left; color:#000;">
-								<h3>Agency:</h3>
+								<h3>Agencia:</h3>
 								<ul>
-                                    <li>Agency name: {{agencyName}}</li>
-                    <li>Contact person: {{agencyContactPerson}}</li>
-                                    <li>Email: {{agencyEmailPerson}}</li>
-                                    <li>Phone number: {{agencyPhonePerson}}</li>
+                                    <li>Nombre de la agencia: {{agencyName}}</li>
+                    				<li>Persona de contacto: {{agencyContactPerson}}</li>
+                                    <li>Correo electrónico: {{agencyEmailPerson}}</li>
+                                    <li>Número de teléfono: {{agencyPhonePerson}}</li>
                                 </ul>
-                                <h3>Tenant:</h3>
+                                <h3>Inquilino:</h3>
                                 <ul>
-                                    <li>Tenant Full name: {{tenantsName}}</li>
-                                    <li>Tenant Email: {{tenantsEmail}}</li>
-                                    <li>Tenant Telephone number: {{tenantsPhone}}</li>
-                                    <li>Net monthly income: {{monthlyNetIncome}}€</li>
-                                    <li>Job Type: {{jobType}}</li>
-                                    <li>DNI/NIE: {{documentNumber}}</li>
+                                    <li>Nombre completo: {{tenantsName}}</li>
+                                    <li>Correo electrónico: {{tenantsEmail}}</li>
+                                    <li>Número de teléfono: {{tenantsPhone}}</li>
+                                    <li>Ingreso mensual neto: {{monthlyNetIncome}}€</li>
+                                    <li>Tipo de trabajo: {{jobType}}</li>
+                                    <li>DNI / NIE: {{documentNumber}}</li>
+                                    
                                 </ul>
-								<h3>Property:</h3>
+								<h3>Apartamento:</h3>
                                 <ul>
-                                    <li>Monthly rent: {{rentAmount}}€</li>
-                                    <li>Selected Product: {{product}}</li>
-                                    <li>Contract duration: {{rentDuration}} years</li>
-                                    <li>Apartment Address: {{rentalAddress}}</li>
-                                    <li>Apartment city: {{rentalCity}}</li>
-                                    <li>Apartment Postal Code: {{rentalPostalCode}}</li>
+                                    <li>Alquiler mensual: {{rentAmount}}€</li>
+                                    <li>Servicio escogido:  {{product}}</li>
+                                    <li>Duración del contrato: {{rentDuration}} años</li>
+                                    <li>Dirección del apartamento: {{rentalAddress}}</li>
+                                    <li>Ciudad: {{rentalCity}}</li>
+                                    <li>Código postal del apartamento: {{rentalPostalCode}}</li>
                                 </ul>
+
                                 
 							</div>
 						</td>
