--- a/api/views/rjxx5Email.handlebars
+++ b/api/views/rjxx5Email.handlebars
@@ -380,7 +380,7 @@ text-decoration: none;
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Great news, {{tenantsName}},</h3>		
+							<h3>Buenas noticias {{tenantsName}},</h3>		
             			</div>
             		</td>
             	</tr>
@@ -393,7 +393,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3>You completed your registration!</h3>
+		              	<h3>¡Tu tarjeta se ha registrado correctamente! Ya puedes continuar con la firma de tu contrato de alquiler.</h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -405,7 +405,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center;">
-		              	<h2>You are only one step ahead from your new apartment!</h2>
+		              	<h2>¡Estás a un solo paso de mudarte a tu nuevo piso! </h2>
 						  
 		          </tr><!-- end: tr -->
 					
@@ -416,7 +416,7 @@ text-decoration: none;
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
-								<h3>Contact your agent/landlord for the next steps.</h3>
+								<h3>Contacta con tu agente para conocer los siguientes pasos.</h3>
 								
 							</div>
 						</td>
@@ -426,7 +426,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px; color: #6aa3a1;">
-		              	<h2>Greetings from Rimbo!</h2>
+		              	<h2>Saludos desde Rimbo,</h2>
 		            	</div>
 		          </tr><!-- end: tr -->
 					
@@ -437,10 +437,10 @@ text-decoration: none;
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: left; padding: 0px 30px; color: #6aa3a1;">
 		              	
-						<h3>Support Team,</h3>
-		              	<h4>Phone - WhatsApp: +34 623 063 769<br/>
+						<h3>Equipo de Soporte,</h3>
+		              	<h4>Móvil -  WhatsApp: +34 623 063 769<br/>
       					E-Mail: info@rimbo.com<br/>
-      					Web site: <a href="http://www.rimbo.rent">rimbo.rent</a>
+      					Web: <a href="http://www.rimbo.rent">rimbo.rent</a>
       					</h4>
 		            	</div>
 		          </tr><!-- end: tr -->
