--- a/api/views/rjdEmail.handlebars
+++ b/api/views/rjdEmail.handlebars
@@ -373,7 +373,7 @@ a{
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Hello Rimbo Super Team!</h3>			
+							<h3>Yay!</h3>			
             				
             			</div>
             		</td>
@@ -387,7 +387,7 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3>The agency {{agencyName}} has filled the Tenant Registration Form (RJ1n)</h3>
+		              	<h3>La agencia {{agencyName}} ha rellenado el formulario RJ1</h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -396,27 +396,27 @@ a{
 					<tr>
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left; color:#000;">
-								<h3>Agency:</h3>
+								<h3>Agencia:</h3>
 								<ul>
-                                    <li>Agency's Name: {{agencyName}}</li>
-                                    <li>Agency Contact: {{agencyContactPerson}}</li>
-                                    <li>Agency's Email: {{agencyEmailPerson}}</li>
-                                    <li>Agency's Phone: {{agencyPhonePerson}}</li>
+                                    <li>Nombre de la inmobiliaria: {{agencyName}}</li>
+                                    <li>Persona de contacto: {{agencyContactPerson}}</li>
+                                    <li>Correo electrónico: {{agencyEmailPerson}}</li>
+                                    <li>Número de teléfono: {{agencyPhonePerson}}</li>
                                 </ul>
-                                <h3>Tenant:</h3>
+                                <h3>Inquilino:</h3>
                                 <ul>
-                                    <li>Tenant's Name: {{tenantsName}}</li>
-                                    <li>Tenant's Email: {{tenantsEmail}}</li>
-                                    <li>Tenant's Phone: {{tenantsPhone}}</li>
+                                    <li>Nombre completo: {{tenantsName}}</li>
+                                    <li>Email: {{tenantsEmail}}</li>
+                                    <li>Número de teléfono: {{tenantsPhone}}</li>
                                 </ul>
-								<h3>Property info:</h3>
+								<h3>PInformación del apartamento:</h3>
                                 <ul>
-                                    <li>Monthly rent: {{rentAmount}}€</li>
-                                    <li>Selected Service: {{product}}</li>
-                                    <li>Contract duration: {{rentDuration}} years</li>
-                                    <li>Address of the property: {{rentalAddress}}</li>
-                                    <li>City: {{rentalCity}}</li>
-                                    <li>Postal Code: {{rentalPostalCode}}</li>
+                                    <li>Alquiler mensual: {{rentAmount}}€</li>
+                                    <li>Servicio escogido: {{product}}</li>
+                                    <li>Duración del contrato: {{rentDuration}} years</li>
+                                    <li>Dirección del apartamento: {{rentalAddress}}</li>
+                                    <li>Ciudad: {{rentalCity}}</li>
+                                    <li>Código postal del apartamento: {{rentalPostalCode}}</li>
                                 </ul>
 							</div>
 						</td>
