--- a/api/views/rj11Email.handlebars
+++ b/api/views/rj11Email.handlebars
@@ -432,9 +432,17 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{tenancyID}}/pm/approved">¡Aprobar!</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{tenancyID}}/pm/approved">¡Aprobar!(DEV)</a></button>
 
-                        <button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{tenancyID}}/pm/rejected">Rechazar</a></button>
+                        <button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{tenancyID}}/pm/rejected">Rechazar(DEV)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/rj2/{{tenancyID}}/pm/approved">¡Aprobar!(PROD)</a></button>
+
+                        <button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/rj2/{{tenancyID}}/pm/rejected">Rechazar(PROD)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/rj2/{{tenancyID}}/pm/approved">¡Aprobar!(PROD2)</a></button>
+
+                        <button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/rj2/{{tenancyID}}/pm/rejected">Rechazar(PROD2)</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
