--- a/api/views/rj14Email.handlebars
+++ b/api/views/rj14Email.handlebars
@@ -444,7 +444,11 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj3/{{randomID}}">¡Empieza tu alquiler!</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/card/{{randomID}}">¡Empieza tu alquiler!(DEV)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/card/{{randomID}}">¡Empieza tu alquiler!(PROD)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/card/{{randomID}}">¡Empieza tu alquiler!(PROD2)</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
