--- a/api/views/rj15Email.handlebars
+++ b/api/views/rj15Email.handlebars
@@ -428,7 +428,11 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj3/{{tenancyID}}/card/approved">Aceptar</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj3/{{tenancyID}}/card/approved">Aceptar(DEV)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/rj3/{{tenancyID}}/card/approved">Aceptar(PROD)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/rj3/{{tenancyID}}/card/approved">Aceptar(PROD2)</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
