--- a/api/views/rj16Email.handlebars
+++ b/api/views/rj16Email.handlebars
@@ -440,7 +440,11 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rjs/{{tenancyID}}">Subir Documentación</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/annex/{{tenancyID}}">Subir Documentación(DEV)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/annex/{{tenancyID}}">Subir Documentación(PROD)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/annex/{{tenancyID}}">Subir Documentación(PROD2)</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
