--- a/api/views/rj4Email.handlebars
+++ b/api/views/rj4Email.handlebars
@@ -465,7 +465,11 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{randomID}}">Me quiero unir</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/tenant/{{randomID}}">Me quiero unir (DEV)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/tenant/{{randomID}}">Me quiero unir(PROD)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/tenant/{{randomID}}">Me quiero unir(PROD2)</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
