--- a/api/views/rjsEmail.handlebars
+++ b/api/views/rjsEmail.handlebars
@@ -458,7 +458,11 @@ li {
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rjs/{{tenancyID}}/service-start">Inicio de Servicios</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rjs/{{tenancyID}}/service-start">Inicio de Servicios(DEV)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/rjs/{{tenancyID}}/service-start">Inicio de Servicios(PROD)</a></button>
+
+						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/rjs/{{tenancyID}}/service-start">Inicio de Servicios(PROD1)</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
