--- a/api/views/rjxx3FilesEmail.handlebars
+++ b/api/views/rjxx3FilesEmail.handlebars
@@ -457,9 +457,19 @@ a{
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px;">
-		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{tenancyID}}/approved">¡Aprobar!</a></button>
+		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{tenancyID}}/approved">¡Aprobar!(DEV)</a></button>
 
-                        <button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{tenancyID}}/rejected">¡Rechazar!</a></button>
+                        <button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{tenancyID}}/rejected">¡Rechazar!(DDEV)</a></button>
+
+
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/rj2/{{tenancyID}}/approved">¡Aprobar!(PROD)</a></button>
+
+                        <button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/rj2/{{tenancyID}}/rejected">¡Rechazar!(PROD)</a></button>
+
+
+						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/rj2/{{tenancyID}}/approved">¡Aprobar!(PROD2)</a></button>
+
+                        <button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/rj2/{{tenancyID}}/rejected">¡Rechazar!(PROD2)</a></button>
 						  
 		          </tr><!-- end: tr -->
 					
