--- a/client/src/components/Footer/footer.module.scss
+++ b/client/src/components/Footer/footer.module.scss
@@ -5,8 +5,8 @@
   margin: 0 auto;
   margin-top: 2rem;
   display: flex;
-  flex-direction: row;
-  height: 70px;
+  flex-direction: column;
+  // height: 15rem;
   justify-content: space-between;
   align-items: center;
   padding: 2rem 2rem;
@@ -29,10 +29,11 @@
 
   .FooterLogo {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    text-align: center;
+    // text-align: center;
     align-items: baseline;
+    margin-bottom: 2rem;
     @media only screen and (min-width: 1200px) {
       display: flex;
       flex-direction: row;
@@ -48,9 +49,12 @@
     }
 
     h2 {
-      display: none;
+      margin-right: 0.7rem;
+      margin-left: 1rem;
+      font-size: 1rem;
+      font-weight: 400;
+
       @media only screen and (min-width: 1200px) {
-        display: block;
         margin-right: 0.7rem;
         margin-left: 1rem;
         font-size: 1rem;
@@ -62,7 +66,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
     @media only screen and (min-width: 1200px) {
       display: flex;
       flex-direction: row;
@@ -101,7 +105,7 @@
   }
 
   a {
-    font-size: 1rem;
+    font-size: 1.1rem;
     @media only screen and (min-width: 1200px) {
       font-size: 1rem;
     }
@@ -110,6 +114,14 @@
       @media only screen and (min-width: 1200px) {
         color: $tertiary-color;
       }
+    }
+  }
+
+  .LinkToPage {
+    font-size: 1.3rem;
+
+    @media only screen and (min-width: 1200px) {
+      font-size: 1rem;
     }
   }
 }
